--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,18 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "nd": "npm run dev"
   },
   "dependencies": {
+    "@solana/web3.js": "^1.98.0",
     "bip39": "^3.1.0",
+    "ed25519-hd-key": "^1.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
+    "tweetnacl": "^1.0.3",
     "vite-plugin-node-polyfills": "^0.22.0"
   },
   "devDependencies": {
