--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@solana/web3.js": "^1.98.0",
     "bip39": "^3.1.0",
     "ed25519-hd-key": "^1.3.0",
+    "ethers": "^6.13.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
